# pymunk

./: .gitignore  .gitmodules  .harper-dictionary.txt  .readthedocs.yaml  .travis.yml  .travis_before_install.sh  CHANGELOG.rst  CITATION.cff  LICENSE.txt  MANIFEST.in  README.rst  README.txt  THANKS.txt  TODO.txt  appveyor.yml  bintray.json  demo_balls_and_lines.py  demo_basic_test.py  demo_contact.py  demo_contact_with_callback.py  demo_moon_buggy.py  demo_moon_main.py  demo_slide_and_pinjoint.py  generate_bindings.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: wheels.yml
additional_examples/: matplotlib_util_demo.ipynb  no_dependencies.py  py2exe_setup__basic_test.py  pyinstaller_basic_test.spec
benchmarks/: Dockerfile  batched-position-api.py  chipmunk.py  cymunk-collision-callback.py  cymunk-get.py  noxfile.py  pymunk-batch-api.py  pymunk-callback.py  pymunk-collision-callback.py  pymunk-get.py  vec2d_baseclass.py
chipmunk_src/: README.txt  chipmunk.c  cpArbiter.c  cpArray.c  cpBB.c  cpBBTree.c  cpBody.c  cpCollision.c  cpHashSet.c  cpJoint.c  cpPolyShape.c  cpShape.c  cpSpace.c  cpSpaceComponent.c  cpSpaceHash.c  cpSpaceQuery.c  cpSpaceStep.c  cpSpatialIndex.c  cpSweep1D.c  cpVect.c  prime.h
chipmunk_src/constraints/: cpConstraint.c  cpDampedRotarySpring.c  cpDampedSpring.c  cpGearJoint.c  cpGrooveJoint.c  cpPinJoint.c  cpPivotJoint.c  cpRatchetJoint.c  cpRotaryLimitJoint.c  cpSimpleMotor.c  cpSlideJoint.c
chipmunk_src/src/: cpCollision.c  cpHastySpace.c
docs/: requirements.txt
docs/api/: api-objects.txt  class-tree.html  epydoc.css  epydoc.js  frames.html  help.html  identifier-index.html  index.html  module-tree.html  pymunk-module.html  pymunk.Arbiter-class.html  pymunk.BB-class.html  pymunk.Body-class.html  pymunk.Circle-class.html  pymunk.Contact-class.html  pymunk.GrooveJoint-class.html  pymunk.Joint-class.html  pymunk.PinJoint-class.html  pymunk.PivotJoint-class.html  pymunk.Poly-class.html  pymunk.Segment-class.html  pymunk.SegmentQueryInfo-class.html  pymunk.Shape-class.html  pymunk.SlideJoint-class.html  pymunk.Space-class.html  pymunk.constraint-module.html  pymunk.constraint.Constraint-class.html  pymunk.constraint.DampedRotarySpring-class.html  pymunk.constraint.DampedSpring-class.html  pymunk.constraint.GearJoint-class.html  pymunk.constraint.GrooveJoint-class.html  pymunk.constraint.PinJoint-class.html  pymunk.constraint.PivotJoint-class.html  pymunk.constraint.RatchetJoint-class.html  pymunk.constraint.RotaryLimitJoint-class.html  pymunk.constraint.SimpleMotor-class.html  pymunk.constraint.SlideJoint-class.html  pymunk.pymunk-module.html  pymunk.pymunk.Arbiter-class.html  pymunk.pymunk.Body-class.html  (+27 more)
docs/html/: .buildinfo  advanced.html  benchmarks.html  examples.html  genindex.html  index.html  installation.html  license.html  news.html  objects.inv  overview.html  py-attributeindex.html  py-classindex.html  py-dataindex.html  py-funcindex.html  py-methodindex.html  py-modindex.html  py-staticmethodindex.html  pymunk.autogeometry.html  pymunk.constraint.html  pymunk.html  pymunk.matplotlib_util.html  pymunk.pygame_util.html  pymunk.pyglet_util.html  pymunk.util.html  pymunk.vec2d.html  pymunkoptions.html  readme.html  search.html  searchindex.js  showcase.html  tutorials.html
docs/src/: Makefile  advanced.rst  benchmarks.rst  conf.py  examples.rst  history.rst  index.rst  installation.rst  license.rst  make.bat  news.rst  news.rst.hidden  overview.rst  pymunk.autogeometry.rst  pymunk.batch.rst  pymunk.constraint.rst  pymunk.constraints.rst  pymunk.examples.rst  pymunk.pygame_util.rst  (+11 more)
dump/: Untitled.ipynb  arcade.py  bench_many_shapes_pybullet.py  body_bench_cffi.py  body_bench_ctypes.py  bug.py  callback.c  callback.h  callback.py  callback_compile.py  collision.py  colors_logo.py  colors_video_particles.py  compile.py  ex.c  ex.h  exlib.py  fluids.py  joint.py  lcompile.py  many_crash.py  pillow_util.py  points.py  pyramid_bench.py  readme.txt  release_msg_5.0.0.txt  segfault.py  sendbody.c  sendbody.py  sendbody_compile.py  so.py  vec2d_bench.py
examples/: arrows.py  balls_and_lines.py  basic_test.py  bouncing_balls.py  box2d_pyramid.py  box2d_vertical_stack.py  breakout.py  camera.py  constraints.py  contact_and_no_flipy.py  contact_with_friction.py  copy_and_pickle.pickle  copy_and_pickle.py  damped_rotary_spring_pointer.py  deformable.py  demo_balls_and_lines.py  demo_basic_test.py  demo_bouncing_balls.py  demo_contact.py  demo_contact_with_callback.py  demo_contact_with_friction.py  demo_moon_buggy.py  demo_moon_main.py  demo_playground.py  demo_point_query.py  demo_py2exe_setup.py  demo_slide_and_pinjoint.py  flipper.py  index_video.py  matplotlib_util_demo.ipynb  newtons_cradle.ipynb  newtons_cradle.py  no_debug.py  planet.py  platformer.py  playground.py  point_query.py  polygon_triangulation.py  py2exe_setup__basic_test.py  py2exe_setup__breakout.py  (+23 more)
pymunk/: __init__.py  _arbiter.py  _base.py  _bb.py  _body.py  _callbacks.py  _chipmunk.py  _chipmunk_cffi.py  _chipmunk_cffi_abi.py  _chipmunk_ffi.py  _chipmunk_manual.py  _collision_handler.py  _contact.py  _contact_point_set.py  _libload.py  _pickle.py  _pyglet15_util.py  _query_info.py  _shapes.py  _space.py  _types.py  _typing_attr.py  _util.py  _version.py  _weakkeysview.py  arbiter.py  auto_geometry.py  autogeometry.py  batch.py  bb.py  body.py  collision_handler.py  constraint.py  constraints.py  contact_point_set.py  ctload.py  libchipmunk.dylib  libload.py  matplotlib_util.py  pillow_util.py  (+13 more)
pymunk_cffi/: callbacks_cdef.h  chipmunk_cdef.h  extensions.c  extensions_cdef.h
pymunkoptions/: __init__.py
tests/: doctests.py  test_arbiter.py  test_autogeometry.py  test_bb.py  test_body.py  test_chipmunk_manual.py  test_common.py  test_constraint.py  test_shape.py  test_shape_filter.py  test_space.py  test_transform.py  test_vec2d.py  unittests.py  vec2d_unittest.py
tools/: create_release.py  create_release_win.py  create_release_win32.py  epydoc.config  epydoc_pymunk.css  generate_bindings.py  generate_docs.py  run_tests.py  update_chipmunk_src.py
(+208 files in other folders)
